2008-03-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/read.t: Add input_logical_lsb_08bit.mat to
	PerlMagick tests.
	* magick/nt_feature.c (CropImageToHBITMAP, ImageToHBITMAP): Use
	GlobalFree() to free bitmap handle.

2008-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/read.t: Added/adjusted WPG test files from Jaroslav
	Fojtik.

2008-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* AUTHORS.txt, BUGS.txt, FAQ.txt, NEWS.txt, PLATFORMS.txt,
	TODO.txt, INSTALL-unix.txt, INSTALL-windows.txt: Use
	reStructuredText format.
	* Makefile.am: Use reStructuredText for more files.

2008-02-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImage): Disable colorspace override
	code since it was being wrongly-triggered in X11 display commands.

2008-02-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/body.html: Update to mention 1.1.11 release.

2008-02-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c (RndToInt): Cast result to 'unsigned int'
	rather than 'int' in order to avoid possible value truncation with
	Q32 build.  Problem was reported by Kai-Uwe Behrmann.
	(TransformRGBImage): Fix loop iterator which was looping one past
	the end of the array.  Reported by Kai-Uwe Behrmann.
	* magick/command.c: Added a -set option to the composite, convert,
	display, mogrify, import commands in order to allow setting an
	image attribute.

2008-02-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: Use MagickAcquireMemory() rather than
	AquireMemory().
	* coders/xwd.c (ReadXWDImage): Eliminate integer overflow
	vulnerability (IDefense 09.19.07).
	* coders/xbm.c (ReadXBMImage): ditto
	* coders/xcf.c (ReadXCFImage): ditto
	* coders/dib.c (ReadDIBImage): ditto
	* coders/dcm.c (ReadDCMImage): ditto

2008-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): The RFC 2301 specification for