@@ -1,4 +1,4 @@
-.TH gm 1 "2008/02/20" "GraphicsMagick"
+.TH gm 1 "2008/03/14" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -2362,6 +2362,17 @@ The choices for N are 2, 3, or 4. When N is 2, the image is divided into
 white depending on their intensity.  When N is 3, there are 3x3 tiles
 and 10 levels of gray can be represented.  When N is 4, there are 4x4
 tiles and 17 levels of gray.
+.TP
+.B "-output-directory \fI<directory>"\fP
+\fRoutput files to directory
+
+Use -output-directory to specify a directory under which to write the
+output files. Normally mogrify overwrites the input files but with this
+option the output files may be written to a different directory so that
+the input files are preserved. The algorithm used preserves all of the
+input path specification in the output path so that the user-specified
+input path (including any directory part) is appended to the output path.
+The user is responsible for creating the output directory.
 .TP
 .B "-page \fI<width>x<height>{+-}<x>{+-}<y>{%}{!}{<}{>}"\fP
 \fRsize and location of an image canvas
@@ -7720,6 +7731,9 @@ Options, above.
 .TP
 .B "-ordered-dither \fI<channeltype> <NxN>"\fP
 \fRordered dither the image
+.TP
+.B "-output-directory \fI<directory>"\fP
+\fRoutput files to directory
 .TP
 .B "-page \fI<width>x<height>{+-}<x>{+-}<y>{%}{!}{<}{>}"\fP
 \fRsize and location of an image canvas
