@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2008-03-14  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (MogrifyImageCommand): Added an
+        -output-directory option to 'mogrify' to send output files to the
+        specified directory.
+
+</UL>
+<p>
 2008-03-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
