@@ -607,7 +607,7 @@ network via FTP and HTTP.</p>
 </ul>
 <hr class="docutils" />
 <div class="line-block">
-<div class="line">Copyright (C) 2003, 2004, 2005, 2007 GraphicsMagick Group</div>
+<div class="line">Copyright (C) 2003 - 2008 GraphicsMagick Group</div>
 <div class="line">Copyright (C) 2002 ImageMagick Studio</div>
 <div class="line">Copyright (C) 1999 E. I. du Pont de Nemours and Company</div>
 </div>
@@ -618,7 +618,7 @@ package; otherwise see <a class="reference" href="http://www.graphicsmagick.org/
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2008-03-09 23:59 UTC.
+Generated on: 2008-03-13 01:56 UTC.
 
 </div>
 </body>
