@@ -6,9 +6,10 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 8  (Solaris x86)">
 	<META NAME="CREATED" CONTENT="20020823;18090800">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20080220;21102900">
+	<META NAME="CHANGED" CONTENT="20080314;18161400">
 	<META NAME="CLASSIFICATION" CONTENT="Description of new features in GraphicsMagick to support the motion picture industry">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, DPX, Cineon, 268M">
+	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
 	<STYLE TYPE="text/css">
@@ -65,8 +66,8 @@ sure to enjoy the film.</FONT></P>
 <P CLASS="western"><FONT FACE="Verdana, Arial, Helvetica, sans-seri">The
 modern motion picture industry usually shoots on film and then uses a
 machine known as a &ldquo;datacine&rdquo; (e.g. <A HREF="http://www.grassvalley.com/products/film/spirit_4k/" TARGET="_top">Spirit
-4K DataCine</A> or </FONT>Cintel DSX)<FONT FACE="Verdana, Arial, Helvetica, sans-seri">
-or a &ldquo;scanner&rdquo; (e.g. <A HREF="http://www.filmlight.ltd.uk/" TARGET="_top">Northlight
+4K DataCine</A> or </FONT>Cintel DSX) <FONT FACE="Verdana, Arial, Helvetica, sans-seri">or
+a &ldquo;scanner&rdquo; (e.g. <A HREF="http://www.filmlight.ltd.uk/" TARGET="_top">Northlight
 Scanner</A>) to convert each film image into an individual image
 file. An alternative to this is to use a high definition CCD camera
 such as the <A HREF="http://www.grassvalley.com/products/cameras/viper/" TARGET="_top">Grass
@@ -83,9 +84,9 @@ necessary to cover the extended dynamic range of film, and that the
 log encoding approximates the density characteristics of film
 (approximately linear when log encoded).</P>
 <P CLASS="western"><FONT FACE="Verdana, Arial, Helvetica, sans-seri">While
-there is some continued use of the legacy</FONT> Kodak Cineon<FONT FACE="Verdana, Arial, Helvetica, sans-seri">
-format due to existing equipment and software, the standard image
-file format for motion picture frames is <A HREF="http://www.smpte.org/" TARGET="_top">SMPTE</A>
+there is some continued use of the legacy</FONT> Kodak Cineon <FONT FACE="Verdana, Arial, Helvetica, sans-seri">format
+due to existing equipment and software, the standard image file
+format for motion picture frames is <A HREF="http://www.smpte.org/" TARGET="_top">SMPTE</A>
 DPX (SMPTE 268M-2003). This format is somewhat similar to the Kodak
 Cineon format, but has the advantage that it is an industry standard
 rather than a vendor standard. DPX files are practically always
@@ -316,8 +317,23 @@ the command provided to it.</P>
 added benefit. It is able to run several commands in the background.
 This means that if your system has multiple CPUs, it can take
 advantage of all the CPUs while still using one command:</P>
-<PRE STYLE="margin-bottom: 0.2in">   find /assets/001 -name '*.dpx' -print | xargs --max-procs 3 --max-args 25 gm mogrify -resize 1828x1556 -depth 10</PRE><H4>
-Creating A Contact Sheet</H4>
+<PRE STYLE="margin-bottom: 0.2in">   find /assets/001 -name '*.dpx' -print | xargs --max-procs 3 --max-args 25 gm mogrify -resize 1828x1556 -depth 10</PRE><P CLASS="western">
+The mogrify command supports the -output-directory option to sent
+files to a different directory than the input files.  This allows
+processing a large number of files without overwriting the input
+files:</P>
+<PRE>   mkdir dest
+   cd source
+   gm mogrify -output-directory ../dest -resize 1828x1556 -depth 10 &ldquo;*.dpx&rdquo;
+</PRE><P CLASS="western">
+Note that the entire input file path specification is preserved when
+composing the output path so that the input file path is simply
+appended to the output directory path. Also, the user is responsible
+for creating any necessary destination directories. As an example of
+the path composition algorithm, if the input file name is specified
+as <I>source/file.dpx</I> and the output directory is specified as
+<I>dest</I>, then the output file path will be <I>dest/source/file.dpx</I>.</P>
+<H4>Creating A Contact Sheet</H4>
 <P CLASS="western">GraphicsMagick may be used to create a contact
 sheet (grid of thumbnails with name and size) by using the &ldquo;VID&rdquo;
 pseudoformat which accepts a wildcarded argument of files (protected
